thirdparty/intel/compiler/include/omp.h

#       define kmp_set_affinity_mask_proc   kmpc_set_affinity_mask_proc
#       define kmp_unset_affinity_mask_proc kmpc_unset_affinity_mask_proc
#       define kmp_get_affinity_mask_proc   kmpc_get_affinity_mask_proc
#       define kmp_malloc                   kmpc_malloc
#       define kmp_calloc                   kmpc_calloc
#       define kmp_realloc                  kmpc_realloc
#       define kmp_free                     kmpc_free
/* These entry points are for Cluster OMP.
 */
#       define kmp_sharable_malloc          kmpc_sharable_malloc
#       define kmp_aligned_sharable_malloc  kmpc_aligned_sharable_malloc
#       define kmp_sharable_calloc          kmpc_sharable_calloc
#       define kmp_sharable_realloc         kmpc_sharable_realloc
#       define kmp_sharable_free            kmpc_sharable_free
#       define kmp_deferred_atomic_add_i4   kmpc_deferred_atomic_add_i4
#       define kmp_deferred_atomic_add_i8   kmpc_deferred_atomic_add_i8
#       define kmp_deferred_atomic_add_r4   kmpc_deferred_atomic_add_r4
#       define kmp_deferred_atomic_add_r8   kmpc_deferred_atomic_add_r8
    /* lock API functions */
    typedef struct omp_lock_t {
        void * _lk;
    } omp_lock_t;
    /* nested lock API functions */
    typedef struct omp_nest_lock_t {
        void * _lk;
    } omp_nest_lock_t;
    /* affinity API functions */
    typedef void * kmp_affinity_mask_t;
    extern int    __KAI_KMPC_CONVENTION  kmp_get_affinity_max_proc    (void);
    extern void   __KAI_KMPC_CONVENTION  kmp_create_affinity_mask     (kmp_affinity_mask_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_destroy_affinity_mask    (kmp_affinity_mask_t *);
    extern int    __KAI_KMPC_CONVENTION  kmp_set_affinity_mask_proc   (int, kmp_affinity_mask_t *);
    extern int    __KAI_KMPC_CONVENTION  kmp_unset_affinity_mask_proc (int, kmp_affinity_mask_t *);
    extern int    __KAI_KMPC_CONVENTION  kmp_get_affinity_mask_proc   (int, kmp_affinity_mask_t *);
    extern void * __KAI_KMPC_CONVENTION  kmp_malloc  (size_t);
    extern void * __KAI_KMPC_CONVENTION  kmp_calloc  (size_t, size_t);
    extern void * __KAI_KMPC_CONVENTION  kmp_realloc (void *, size_t);
    extern void   __KAI_KMPC_CONVENTION  kmp_free    (void *);
    /* Cluster OMP API functions */
    extern void * __KAI_KMPC_CONVENTION  kmp_sharable_malloc  (size_t);
    extern void * __KAI_KMPC_CONVENTION  kmp_aligned_sharable_malloc  (size_t);
    extern void * __KAI_KMPC_CONVENTION  kmp_sharable_calloc  (size_t, size_t);
    extern void * __KAI_KMPC_CONVENTION  kmp_sharable_realloc (void *, size_t);
    extern void   __KAI_KMPC_CONVENTION  kmp_sharable_free    (void *);
    extern void   __KAI_KMPC_CONVENTION  kmp_lock_cond_wait           (omp_lock_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_lock_cond_signal         (omp_lock_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_lock_cond_broadcast      (omp_lock_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_nest_lock_cond_wait      (omp_nest_lock_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_nest_lock_cond_signal    (omp_nest_lock_t *);
    extern void   __KAI_KMPC_CONVENTION  kmp_nest_lock_cond_broadcast (omp_nest_lock_t *);
    extern int    __KAI_KMPC_CONVENTION  kmp_get_process_num(void);
    extern int    __KAI_KMPC_CONVENTION  kmp_get_num_processes(void);
    extern int    __KAI_KMPC_CONVENTION  kmp_get_process_thread_num(void);
    extern void   __KAI_KMPC_CONVENTION  kmp_set_warnings_on(void);
    extern void   __KAI_KMPC_CONVENTION  kmp_set_warnings_off(void);
    extern int    __KAI_KMPC_CONVENTION  kmp_is_sharable(void*);