thirdparty/intel/compiler/include/omp_lib.f90


          function kmp_get_affinity_max_proc() bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_get_affinity_max_proc
          end function kmp_get_affinity_max_proc

          subroutine kmp_create_affinity_mask(mask) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_affinity_mask_kind) mask
          end subroutine kmp_create_affinity_mask

          subroutine kmp_destroy_affinity_mask(mask) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_affinity_mask_kind) mask
          end subroutine kmp_destroy_affinity_mask

          function kmp_set_affinity_mask_proc(proc, mask) bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_set_affinity_mask_proc
            integer (kind=omp_integer_kind), value :: proc
            integer (kind=kmp_affinity_mask_kind) mask
          end function kmp_set_affinity_mask_proc

          function kmp_unset_affinity_mask_proc(proc, mask) bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_unset_affinity_mask_proc
            integer (kind=omp_integer_kind), value :: proc
            integer (kind=kmp_affinity_mask_kind) mask
          end function kmp_unset_affinity_mask_proc

          function kmp_get_affinity_mask_proc(proc, mask) bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_get_affinity_mask_proc
            integer (kind=omp_integer_kind), value :: proc
            integer (kind=kmp_affinity_mask_kind) mask
          end function kmp_get_affinity_mask_proc

          function kmp_malloc(size) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_malloc
            integer (kind=kmp_size_t_kind), value :: size
          end function kmp_malloc

          function kmp_calloc(nelem, elsize) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_calloc
            integer (kind=kmp_size_t_kind), value :: nelem
            integer (kind=kmp_size_t_kind), value :: elsize
          end function kmp_calloc

          function kmp_realloc(ptr, size) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_realloc
            integer (kind=kmp_pointer_kind), value :: ptr
            integer (kind=kmp_size_t_kind), value :: size
          end function kmp_realloc

          subroutine kmp_free(ptr) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind), value :: ptr
          end subroutine kmp_free

!         ***
!         *** kmp_* entry points for Cluster OpenMP
!         ***

          function kmp_sharable_malloc(size) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_sharable_malloc
            integer (kind=kmp_size_t_kind), value :: size
          end function kmp_sharable_malloc

          function kmp_aligned_sharable_malloc(size) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_aligned_sharable_malloc
            integer (kind=kmp_size_t_kind), value :: size
          end function kmp_aligned_sharable_malloc

          function kmp_sharable_calloc(nelem, elsize) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_sharable_calloc
            integer (kind=kmp_size_t_kind), value :: nelem
            integer (kind=kmp_size_t_kind), value :: elsize
          end function kmp_sharable_calloc

          function kmp_sharable_realloc(ptr, size) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind) kmp_sharable_realloc
            integer (kind=kmp_pointer_kind), value :: ptr
            integer (kind=kmp_size_t_kind), value :: size
          end function kmp_sharable_realloc

          subroutine kmp_sharable_free(ptr) bind(c)
            use omp_lib_kinds
            integer (kind=kmp_pointer_kind), value :: ptr
          end subroutine kmp_sharable_free

          subroutine kmp_lock_cond_wait(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_lock_kind) lockvar
          end subroutine kmp_lock_cond_wait

          subroutine kmp_lock_cond_signal(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_lock_kind) lockvar
          end subroutine kmp_lock_cond_signal

          subroutine kmp_lock_cond_broadcast(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_lock_kind) lockvar
          end subroutine kmp_lock_cond_broadcast

          subroutine kmp_nest_lock_cond_wait(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_nest_lock_kind) lockvar
          end subroutine kmp_nest_lock_cond_wait

          subroutine kmp_nest_lock_cond_signal(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_nest_lock_kind) lockvar
          end subroutine kmp_nest_lock_cond_signal

          subroutine kmp_nest_lock_cond_broadcast(lockvar) bind(c)
            use omp_lib_kinds
            integer (kind=omp_nest_lock_kind) lockvar
          end subroutine kmp_nest_lock_cond_broadcast

          function kmp_get_num_processes() bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_get_num_processes
          end function kmp_get_num_processes

          function kmp_get_process_num() bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_get_process_num
          end function kmp_get_process_num

          function kmp_get_process_thread_num() bind(c)
            use omp_lib_kinds
            integer (kind=omp_integer_kind) kmp_get_process_thread_num
          end function kmp_get_process_thread_num

          subroutine kmp_set_warnings_on() bind(c)
            use omp_lib_kinds
          end subroutine kmp_set_warnings_on

          subroutine kmp_set_warnings_off() bind(c)
            use omp_lib_kinds
          end subroutine kmp_set_warnings_off

          function kmp_is_sharable(ptr) bind(c)
            use omp_lib_kinds
            logical (kind=omp_logical_kind) kmp_is_sharable
            integer (kind=kmp_pointer_kind), value :: ptr
          end function kmp_is_sharable

          subroutine kmp_deferred_atomic_add_i4(var, val) bind(c)
            use, intrinsic :: iso_c_binding
            integer (kind=c_int) var
            integer (kind=c_int), value :: val
          end subroutine kmp_deferred_atomic_add_i4

          subroutine kmp_deferred_atomic_add_i8(var, val) bind(c)
            use, intrinsic :: iso_c_binding
            integer (kind=c_long_long) var
            integer (kind=c_long_long), value :: val
          end subroutine kmp_deferred_atomic_add_i8

          subroutine kmp_deferred_atomic_add_r4(var, val) bind(c)
            use, intrinsic :: iso_c_binding
            real (kind=c_float) var
            real (kind=c_float), value :: val
          end subroutine kmp_deferred_atomic_add_r4

          subroutine kmp_deferred_atomic_add_r8(var, val) bind(c)
            use, intrinsic :: iso_c_binding
            real (kind=c_double) var
            real (kind=c_double), value :: val
          end subroutine kmp_deferred_atomic_add_r8

        end interface

      end module omp_lib
